@@ -1,13 +1,14 @@
 version 1.0-rc - XX-Apr-2011
 . [NEW] Actions: Added the possibility to create a CCSpawn and CCSequence with an NSArray
 . [NEW] CCArray: Added exchangeObject & exchangeObjectAtIndex (issue #1085)
-. [NEW] Templates: Added Xcode4 templates for cocos2d, cocos2d+box2d, cocos2d+chipmunk
+. [NEW] Templates: Added Xcode4 templates for cocos2d, cocos2d+box2d, cocos2d+chipmunk, cocos2d Mac
 . [NEW] Tempaltes: Possibility to run the installer from any directory
 . [NEW] TextureAtlas: added possibility to draw the quads in parts
 . [FIX] All: Removed many deprecated methods and classes that were scheduled for removal on v1.0
 . [FIX] Documentation: Drawing primitives fixed syntax error (issue #1127)
 . [FIX] Documentation: onExit doxystring improved (issue #1135)
 . [FIX] ProgressTimer: fixed underflow in setPercentage() (issue #1123)
+. [FIX] Templates: Don't generate analyze warnings in Xcode4 (issue #1142)
 . [FIX] Xcode: TexturePVR compiles when using cocos2d as an external library (issue #1132)
 . [FIX] Xcode: Added SKIP_INSTALL=YES in libraries for Xcode4 (issue #1137)
 . [FIX-MAC] All: Code is 64-bit friendly. No more warnings when casting from 64 to 32 bits
